--- a/dawg.cabal
+++ b/dawg.cabal
@@ -3,7 +3,7 @@
 name:                dawg
 version:             0.1.0.0
 synopsis:            Generation and traversal of highly compressed directed acyclic word graphs. 
--- description:         
+description:         Generation and traversal of highly compressed directed acyclic word graphs.
 license:             BSD3
 license-file:        LICENSE
 author:              Andras Kovacs
@@ -12,6 +12,10 @@ category:            Data
 build-type:          Simple
 cabal-version:       >=1.8
 data-files:          TWL06.txt
+
+Source-Repository head
+    Type: git
+    Location: https://github.com/AndrasKovacs/dawg
 
 library
   exposed-modules:      Data.DAWG      
