--- a/packed-dawg.cabal
+++ b/packed-dawg.cabal
@@ -1,6 +1,6 @@
 
 
-name:                dawg
+name:                packed-dawg
 version:             0.1.0.0
 synopsis:            Generation and traversal of highly compressed directed acyclic word graphs. 
 description:         Generation and traversal of highly compressed directed acyclic word graphs.
@@ -18,15 +18,15 @@ Source-Repository head
     Location: https://github.com/AndrasKovacs/dawg
 
 library
-  exposed-modules:      Data.DAWG      
-  build-depends:        base ==4.6.*, vector ==0.10.*, containers ==0.5.*, mtl ==2.1.*, 
+  exposed-modules:      Data.DAWG.Packed      
+  build-depends:        base ==4.6.*, vector ==0.10.*, mtl ==2.1.*, 
                         vector-binary-instances ==0.2.1.*, binary ==0.7.*, deepseq==1.3.*, unordered-containers==0.2.*
 
 test-suite test
     main-is:            Tests.hs
     type:               exitcode-stdio-1.0
 
-    Build-depends:      base ==4.6.*, vector ==0.10.*, containers ==0.5.*, mtl ==2.1.*, 
+    Build-depends:      base ==4.6.*, vector ==0.10.*, mtl ==2.1.*, 
                         vector-binary-instances ==0.2.1.*, binary ==0.7.*, deepseq==1.3.*, unordered-containers==0.2.*,
 
                         QuickCheck == 2.5.*,test-framework-quickcheck2 == 0.3.*,
@@ -36,7 +36,7 @@ test-suite test
 
 benchmark bench-dawg-gen
     main-is:            Benchmarks.hs
-    Build-depends:      base ==4.6.*, vector ==0.10.*, containers ==0.5.*, mtl ==2.1.*, 
+    Build-depends:      base ==4.6.*, vector ==0.10.*, mtl ==2.1.*, 
                         vector-binary-instances ==0.2.1.*, binary ==0.7.*, deepseq==1.3.*, unordered-containers==0.2.*,
 
                         QuickCheck == 2.5.*,test-framework-quickcheck2 == 0.3.*,
