--- a/packed-dawg.cabal
+++ b/packed-dawg.cabal
@@ -29,8 +29,7 @@ test-suite test
     Build-depends:      base ==4.6.*, vector ==0.10.*, mtl ==2.1.*, 
                         vector-binary-instances ==0.2.1.*, binary ==0.7.*, deepseq==1.3.*, unordered-containers==0.2.*,
 
-                        QuickCheck == 2.5.*,test-framework-quickcheck2 == 0.3.*,
-                        test-framework == 0.8.*,HUnit == 1.2.*,test-framework-hunit == 0.3.*
+                        QuickCheck >= 2.5, HUnit >= 1.2, tasty >= 0.3, tasty-quickcheck >= 0.3, tasty-hunit >= 0.2
 
     ghc-options:        -O2 -rtsopts -threaded 
 
@@ -39,11 +38,7 @@ benchmark bench-dawg-gen
     Build-depends:      base ==4.6.*, vector ==0.10.*, mtl ==2.1.*, 
                         vector-binary-instances ==0.2.1.*, binary ==0.7.*, deepseq==1.3.*, unordered-containers==0.2.*,
 
-                        QuickCheck == 2.5.*,test-framework-quickcheck2 == 0.3.*,
-                        test-framework == 0.8.*,HUnit == 1.2.*,test-framework-hunit == 0.3.*,
-
-                        criterion==0.6.*
-
+                        criterion >= 0.8
 
     ghc-options:        -O2 -rtsopts -threaded 
     type:               exitcode-stdio-1.0
