--- a/packed-dawg.cabal
+++ b/packed-dawg.cabal
@@ -1,7 +1,7 @@
 
 
 name:                packed-dawg
-version:             0.2.0.4
+version:             0.2.0.5
 synopsis:            Generation and traversal of highly compressed directed acyclic word graphs. 
 description:         Generation and traversal of highly compressed directed acyclic word graphs.
 license:             BSD3
@@ -19,26 +19,25 @@ Source-Repository head
 
 library
   exposed-modules:      Data.DAWG.Packed      
-  build-depends:        base >= 4.6.0 && < 4.8.0, vector ==0.10.*, mtl ==2.1.*, 
-                        vector-binary-instances ==0.2.1.*, binary ==0.7.*, deepseq==1.3.*, unordered-containers==0.2.*
+  build-depends:        base >= 4.6.0 && <= 4.9, vector == 0.10.*, mtl >=2.1, 
+                        vector-binary-instances == 0.2.1.*, binary == 0.7.*, deepseq>=1.3, unordered-containers >= 0.2
 
 test-suite test
-    main-is:            Tests.hs
-    type:               exitcode-stdio-1.0
+  main-is:            Tests.hs
+  type:               exitcode-stdio-1.0
 
-    Build-depends:      base >= 4.6.0 && < 4.8.0, vector ==0.10.*, mtl ==2.1.*, 
-                        vector-binary-instances ==0.2.1.*, binary ==0.7.*, deepseq==1.3.*, unordered-containers==0.2.*,
+  build-depends:      base >= 4.6.0 && <= 4.9, vector == 0.10.*, mtl >=2.1, 
+                      vector-binary-instances == 0.2.1.*, binary == 0.7.*, deepseq>=1.3, unordered-containers >= 0.2,
+                      QuickCheck >= 2.5, HUnit >= 1.2, tasty >= 0.3, tasty-quickcheck >= 0.3, tasty-hunit >= 0.2
 
-                        QuickCheck >= 2.5, HUnit >= 1.2, tasty >= 0.3, tasty-quickcheck >= 0.3, tasty-hunit >= 0.2
-
-    ghc-options:        -O2 -rtsopts
+  ghc-options:        -O2 -rtsopts
 
 benchmark bench-dawg-gen
     main-is:            Benchmarks.hs
-    Build-depends:      base >= 4.6.0 && < 4.8.0, vector ==0.10.*, mtl ==2.1.*, 
-                        vector-binary-instances ==0.2.1.*, binary ==0.7.*, deepseq==1.3.*, unordered-containers==0.2.*,
+    Build-depends:      base >= 4.6.0 && <= 4.9, vector == 0.10.*, mtl >=2.1, 
+                        vector-binary-instances == 0.2.1.*, binary == 0.7.*, deepseq>=1.3, unordered-containers >= 0.2,
 
-                        criterion >= 0.8
+                        criterion >= 1.0
 
     ghc-options:        -O2 -rtsopts
     type:               exitcode-stdio-1.0
